--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~49.0.10",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "intl": "^1.2.5",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
