--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "expo": "~49.0.10",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "i18next": "^23.7.6",
     "intl": "^1.2.5",
     "react": "18.2.0",
+    "react-i18next": "^13.5.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
