--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^13.5.0",
     "react-native": "0.72.6",
+    "react-native-auto-size-text": "^1.1.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
